# MISW4406-Reactive-Builders-Entrega5

./: .dockerignore  .gitignore  .txt  README.md  Reactive Builders.postman_collection.json  bff-requirements.txt  bff.Dockerfile  docker-compose.yml  eventos.Dockerfile  infra.yaml  init-schema.sql  pagos-requirements.txt  pagos.Dockerfile  pyproject.toml  recrear_persistencia.sh  requirements.txt  sidecar-aeroalpes.yml
.devcontainer/: setup.sh
.github/workflows/: pull-request-actions.yml
docs/: architecture.puml  contextosToBe.cml  subdominios.cml
src/aeroalpes/api/: eventos.py  publicaciones.py
src/alpespartners/api/: __init__.py  eventos.py  medios_marketing.py  prueba.py
src/alpespartners/ejemplos/: servicio_busqueda.py  servicios.py
src/asociaciones_estrategicas/: Dockerfile  README.md  asociaciones-requirements.txt  asociaciones_saga.Dockerfile  compile_files.py  contents_summary.txt  micro_asociaciones.postman.json  notasAsociaciones.md
src/asociaciones_estrategicas/api/: __init__.py  asociaciones.py
src/asociaciones_estrategicas/config/: db.py  uow.py
src/bff_web/: main.py  mutacion.graphql  notasBFF.md  query.graphql  utils.py
src/eventos_y_atribucion/: README.md  Reactive Builders.postman_collection.json
src/eventos_y_atribucion/api/: __init__.py  eventos.py  medios_marketing.py  prueba.py
src/eventos_y_atribucion/config/: uow.py
src/pagos/: Pagos.postman_collection.json  README.md  consumidores.py  main.py
src/pagos/api/: __init__.py  pagos.py
src/pagos/config/: db.py  uow.py
tests/unit/api/: test_api.py
(+214 files in other folders)
