[project]
name = "alpespartners"
version = "1.0.0"
authors = [
  { name="Reactive Builders", email="d.diazm@uniandes.edu.co" },
]
description = "Proyecto de AlpesPartners"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]